build partial homepage

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
 									<li><a href="js.html">js</a></li>
 									<li><a href="dom.html">dom</a></li>
 									<li><a href="config.html">config</a></li>
+									<li>
+										<a href="#">architecture</a>
+										<ul>
+											<li><a href="#">project architecture</a></li>
+											<li><a href="design-pattern.html">design pattern</a></li>
+										</ul>
+									</li>
 									<li><a href="contact.html">Contact</a></li>
 									<!-- 
 									<li class="submenu">
@@ -72,13 +79,13 @@
 					<div class="inner">
 
 						<header>
-							<h2>TWENTY</h2>
+							<h2>Joyce Zhou</h2>
 						</header>
-						<p>This is <strong>Twenty</strong>, a free
+						<p> Joyce's <strong>Coding Journal</strong>, 一个
 						<br />
-						responsive template
+						记录每日代码学习的地方
 						<br />
-						by <a href="http://html5up.net">HTML5 UP</a>.</p>
+						by <a href="http://html5up.net">Joyce ☻ </a>.</p>
 						<footer>
 							<ul class="buttons stacked">
 								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
@@ -94,29 +101,49 @@
 
 					<header class="special container">
 						<span class="icon solid fa-chart-bar"></span>
-						<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
+						<h2>A brief <strong>introduction</strong> of who I am
 						<br />
-						I decided to give it a really creative name.</h2>
-						<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
+						And what you can expected from here.</h2>
+						<p>这里就是我的代码 <strong>日记本</strong>。 开始写代码也一年了，希望在这里分享我的每日学习
 						<br />
-						it's minimally designed, fully responsive, built on HTML5/CSS3,
-						and, like all my stuff,
+						有一个地方能让我每天系统的把自己所学的东西整理出来。
+						算是一个督促自己养成每天写代码的好习惯的地方吧
 						<br />
-						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
+						我也在写自己的小项目，
+						<!-- 
+							<a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> -->
+						我也会把这些小项目的链接放在我的网站里。
+						 </p>
 					</header>
 
 					<!-- One -->
 						<section class="wrapper style2 container special-alt">
 							<div class="row gtr-50">
 								<div class="col-8 col-12-narrower">
-
 									<header>
-										<h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
+										<h2>一点关于
+											<strong>我</strong> 
+											的小事
+										</h2>
 									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
+									<p>
+										我是在美国🇺🇸普渡大学读书的大四学生。喜欢上代码是因为一堂讲代码的初级课。当时老师让我们考虑一个很简单的问题－
+										斐波纳切数列。我就疯狂的喜欢上了这个神奇的东西，它用最简洁的有逻辑的方式在表达自己的观点。
+									</p>
+									<p>
+										在我的努力之下后来去了美国一家3D打印公司实习，接触了前端编程。每次都能看见在自己的思考之下创造出一个好看的页面，
+										那种成就感是怎么样也难以形容的。
+									</p>
+									<p>
+										现在我快毕业了，希望能找到一家公司，在里面努力成长，以后可以和公司一起进步。
+									</p>
 									<footer>
 										<ul class="buttons">
-											<li><a href="#" class="button">Find Out More</a></li>
+											<li>
+												<a href="#" class="button btn-download--resume">
+													查看<em>我的简历</em>
+												</a>
+											</li>
 										</ul>
 									</footer>
 
@@ -285,6 +312,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="index.js"></script>
 
 	</body>
 </html>
