--- a/design-pattern.html
+++ b/design-pattern.html
@@ -15,57 +15,65 @@
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
 
-			<!-- Header -->
-            <header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">Joyce Zhou
-						<span>My Coding Journal</span>
-						</a>
-					</h1>
-					<nav id="nav">
-						<ul>
-							<li class="current"><a href="index.html">Welcome</a></li>
-							<li class="submenu">
-								<a href="#">分类</a>
-								<ul>
-									<li><a href="left-sidebar.html">html</a></li>
-									<!-- css -->
-									<li class="submenu">
-											<a href="#">css</a>
-											<ul>
-												<li><a href="#">css</a></li>
-												<li><a href="preprocessor.html">preprocessor</a></li>
-												<li><a href="#">framework</a></li>
-											</ul>
-										</li>
-									<li><a href="js.html">js</a></li>
-									<li><a href="dom.html">dom</a></li>
-									<li><a href="config.html">config</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<!-- 
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
-									-->
-								</ul>
-							</li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header>
+			<
+                <!-- Header -->
+                    <header id="header" class="alt">
+                        <h1 id="logo"><a href="index.html">Joyce Zhou
+                            <span>My Coding Journal</span>
+                            </a>
+                        </h1>
+                        <nav id="nav">
+                            <ul>
+                                <li class="current"><a href="index.html">Welcome</a></li>
+                                <li class="submenu">
+                                    <a href="#">分类</a>
+                                    <ul>
+                                        <li><a href="left-sidebar.html">html</a></li>
+                                        <!-- css -->
+                                        <li class="submenu">
+                                                <a href="#">css</a>
+                                                <ul>
+                                                    <li><a href="#">css</a></li>
+                                                    <li><a href="preprocessor.html">preprocessor</a></li>
+                                                    <li><a href="#">framework</a></li>
+                                                </ul>
+                                            </li>
+                                        <li><a href="js.html">js</a></li>
+                                        <li><a href="dom.html">dom</a></li>
+                                        <li><a href="config.html">config</a></li>
+                                        <li>
+                                            <a href="#">architecture</a>
+                                            <ul>
+                                                <li><a href="#">project architecture</a></li>
+                                                <li><a href="design-pattern.html">design pattern</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a href="contact.html">Contact</a></li>
+                                        <!-- 
+                                        <li class="submenu">
+                                            <a href="#">Submenu</a>
+                                            <ul>
+                                                <li><a href="#">Dolore Sed</a></li>
+                                                <li><a href="#">Consequat</a></li>
+                                                <li><a href="#">Lorem Magna</a></li>
+                                                <li><a href="#">Sed Magna</a></li>
+                                                <li><a href="#">Ipsum Nisl</a></li>
+                                            </ul>
+                                        </li>
+                                        -->
+                                    </ul>
+                                </li>
+                                <li><a href="#" class="button primary">Sign Up</a></li>
+                            </ul>
+                        </nav>
+                    </header>
 
 			<!-- Main -->
 				<article id="main">
 
 					<header class="special container">
 						<span class="icon solid fa-sun"></span>
-						<h2>File Config <strong>文件配置</strong></h2>
+						<h2>Design Pattern <strong>设计模式</strong></h2>
 						<p>“ Code is like humor. When you have to explain it, it’s bad.” – Cory House</p>
 					</header>
 
@@ -74,11 +82,11 @@
 							<!-- Content -->
 								<div class="content">
 									<section>
-										<a href="#" class="image featured"><img src="images/config-banner.jpeg" alt="" /></a>
+										<a href="./designPattern/observer.html" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Dolore Amet Consequat</h3>
+											<h3>Obsedsfdf/h3>
 										</header>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum massa. Morbi eu faucibus massa. Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
+										<p> dfddf</p>
 										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique. Sed id sem et massa ornare pellentesque. Maecenas pharetra porta accumsan. </p>
 										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus, non hendrerit ipsum arcu tristique est.</p>
 									</section>
@@ -93,12 +101,12 @@
 
 									<section>
 										<header>
-											<h3>This is Something</h3>
+											<h3>Observer 观察者</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>最经典的设计模式之一</p>
 										<footer>
 											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
+												<li><a href="./designPattern/observer.html" class="button small">Learn More</a></li>
 											</ul>
 										</footer>
 									</section>
