--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -16,18 +16,32 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+			<header id="header" class="alt">
+					<h1 id="logo"><a href="index.html">Joyce Zhou
+						<span>My Coding Journal</span>
+						</a>
+					</h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
 							<li class="submenu">
-								<a href="#">Layouts</a>
+								<a href="#">分类</a>
 								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li><a href="left-sidebar.html">html</a></li>
+									<!-- css -->
+									<li class="submenu">
+											<a href="#">css</a>
+											<ul>
+												<li><a href="#">css</a></li>
+												<li><a href="preprocessor.html">preprocessor</a></li>
+												<li><a href="#">framework</a></li>
+											</ul>
+										</li>
+									<li><a href="js.html">js</a></li>
+									<li><a href="dom.html">dom</a></li>
+									<li><a href="config.html">config</a></li>
 									<li><a href="contact.html">Contact</a></li>
+									<!-- 
 									<li class="submenu">
 										<a href="#">Submenu</a>
 										<ul>
@@ -38,6 +52,7 @@
 											<li><a href="#">Ipsum Nisl</a></li>
 										</ul>
 									</li>
+									-->
 								</ul>
 							</li>
 							<li><a href="#" class="button primary">Sign Up</a></li>
