scss palette usage

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 									<li class="submenu">
 											<a href="#">css</a>
 											<ul>
-												<li><a href="#">css</a></li>
+												<li><a href="css.html">css</a></li>
 												<li><a href="preprocessor.html">preprocessor</a></li>
 												<li><a href="#">framework</a></li>
 											</ul>
