--- a/css.html
+++ b/css.html
@@ -14,7 +14,6 @@
 	</head>
 	<body class="index is-preload">
 		<div id="page-wrapper">
-
 			<!-- Header -->
 				<header id="header" class="alt">
 					<h1 id="logo"><a href="index.html">Joyce Zhou
@@ -54,10 +53,8 @@
 						</ul>
 					</nav>
 				</header>
-
 			<!-- Banner -->
 				<section id="banner">
-
 					<!--
 						".inner" is set up as an inline-block so it automatically expands
 						in both directions to fit whatever's inside it. This means it won't
@@ -65,7 +62,6 @@
 						appropriate (<br />).
 					-->
 					<div class="inner">
-
 						<header>
 							<h2>Joyce Zhou</h2>
 						</header>
@@ -79,20 +75,15 @@
 								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
 							</ul>
 						</footer>
-
 					</div>
-
 				</section>
-
 			<!-- Main -->
             <article id="main">
-
                 <header class="special container">
                     <span class="icon solid fa-sun"></span>
                     <h2>Basic <strong>CSS </strong> 知识</h2>
                     <p>“ Code is like humor. When you have to explain it, it’s bad.” – Cory House</p>
                 </header>
-
                 <!-- One -->
                     <section class="wrapper style4 container">
                         <!-- Content -->
@@ -100,13 +91,61 @@
                                 <section>
                                     <a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
                                     <header>
-                                        <h3>Dolore Amet Consequat</h3>
+                                        <h3>想看的内容都在这里啦</h3>
                                     </header>
-                                    <a href="#cssAttributeSelector">css attribute 选择器</a>    
+                                    <a href="#sameWidth">想让多个元素在同一行</a><br/>    
+                                    <a href="#cssAttributeSelector">css attribute 选择器</a><br/>    
                                     <a href="#hideElement">透明</a>    
                                 </section>
                             </div>
-
+                    </section>
+                <!-- content -->
+                    <section class="wrapper style4 container" id="sameWidth">
+                        <!-- Content -->
+                            <div class="content">
+                                <section>
+                                    <header>
+                                        <h3 class="">想让多个元素 <strong>汇聚在同一行</strong>的小心愿</h3>
+                                    </header>
+                                    <p>
+                                        <h4>大家遇到的问题</h4>
+                                        大家在排列元素们在同一行的时候都会情不自禁的用 width: 50%; 设置给两个子元素。这个时候讨厌的事情就发生啦。
+                                        你会惊讶的发现，“根本就没办法在同一行啊！为什么还是两行呢”。
+                                    </p>
+                                    <p> 
+                                        <h4>邪恶的 <strong>html 空白折叠</strong></h4>
+                                        其实问题就是html 的换行，tab, space 都会被解析为一个space. 
+                                        空白折叠就是如果我们hit tab\space\change line 很多次 browser 也只会把它看作是一个space.浏览器在内部解析时
+                                        其实是把这个空格解析成一个& nbsp 符号。
+                                        <br/>IDE:<span class="diagram__component">space space space</span> 
+                                         ---> BROSWER:<span class="diagram__component">& nbsp;</span> <br/>
+                                    </p>
+                                    <p> 
+                                        <h4>破除诅咒的<strong>方法</strong>以及方法比较</h4>
+                                        有两个方法可以解决这个问题。
+                                        <ul>
+                                            <li>把宽度设置为 width: (100%/elementNumber-1)
+                                                <br/>这个方法应该是最常用也最intuitive的了。而且没什么坏处。
+                                            </li>
+                                            <li>可以在父元素的css中将font-size:0px
+                                                <br/>既然多出来的是我们的一个 "& nbsp" 符号。那么将父元素的字体大小设为0px就相当于是
+                                                不去显示这个字了。<br/>
+                                                这个方法也不赖，就是要一定一定记得
+                                                <strong>在子元素中把font-size要手动重新设回来，要不文字就都会消失的</strong>
+                                            </li>
+                                        </ul>
+                                    </p>
+                                    <p>
+                                        <h4>那么是时候看看代码了<strong>👏</strong></h4>
+                                        <p class="codepen" data-height="300" data-theme-id="37857" data-default-tab="html,result" data-user="joycho123" data-slug-hash="gOYVdGO" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="gOYVdGO">
+                                            <span>See the Pen <a href="https://codepen.io/joycho123/pen/gOYVdGO">
+                                            gOYVdGO</a> by Joy (<a href="https://codepen.io/joycho123">@joycho123</a>)
+                                            on <a href="https://codepen.io">CodePen</a>.</span>
+                                          </p>
+                                          <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+                                    </p>
+                                </section>
+                            </div>
                     </section>
                 <!-- content -->
                     <section class="wrapper style4 container" id="cssAttributeSelector">
@@ -139,8 +178,7 @@
                                     </p>
                                     <p>
                                         <h4>那么举一个<strong>🌰</strong>吧</h4>
-                                        一个很经典的面试题其实解释了这个问题
-                                        
+                                        一个很经典的面试题其实解释了这个问题         
                                     </p>
                                     <p> 
                                         <h4>动态出现的 <strong>核心技术和工具</strong></h4>
@@ -150,8 +188,6 @@
                                                 <li>重绘 repaint</li>
                                             </ul>
                                             回流<br/>
-
-
                                         </p>
                                     <p>
                                         <h4>各个property的 <strong>优缺点</strong>分析</h4>
@@ -159,7 +195,6 @@
                                     </p>
                                 </section>
                             </div>
-
                     </section>
                     <section class="wrapper style4 container" id="hideElement">
                         <!-- Content -->
@@ -202,23 +237,17 @@
                                                 <li>重绘 repaint</li>
                                             </ul>
                                             回流<br/>
-
-
                                         </p>
                                     <p>
-                                        <h4>各个property的 <strong>优缺点</strong>分析</h4>
-                                                                            
+                                        <h4>各个property的 <strong>优缺点</strong>分析</h4>                    
                                     </p>
                                 </section>
                             </div>
-
                     </section>
-
                 <!-- Two -->
                     <section class="wrapper style1 container special">
                         <div class="row">
                             <div class="col-4 col-12-narrower">
-
                                 <section>
                                     <header>
                                         <h3>This is Something</h3>
@@ -230,10 +259,8 @@
                                         </ul>
                                     </footer>
                                 </section>
-
                             </div>
                             <div class="col-4 col-12-narrower">
-
                                 <section>
                                     <header>
                                         <h3>Also Something</h3>
@@ -245,10 +272,8 @@
                                         </ul>
                                     </footer>
                                 </section>
-
                             </div>
                             <div class="col-4 col-12-narrower">
-
                                 <section>
                                     <header>
                                         <h3>Probably Something</h3>
@@ -260,15 +285,12 @@
                                         </ul>
                                     </footer>
                                 </section>
-
                             </div>
                         </div>
                     </section>
-
             </article>
 			<!-- Footer -->
 				<footer id="footer">
-
 					<ul class="icons">
 						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -276,15 +298,11 @@
 						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a></li>
 					</ul>
-
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
-
 				</footer>
-
 		</div>
-
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
@@ -295,6 +313,5 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="index.js"></script>
-
 	</body>
 </html>
