--- a/design-pattern.html
+++ b/design-pattern.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Twenty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>No Sidebar - Twenty by HTML5 UP</title>
@@ -14,14 +9,9 @@
 	</head>
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
-
-			<
                 <!-- Header -->
                     <header id="header" class="alt">
-                        <h1 id="logo"><a href="index.html">Joyce Zhou
-                            <span>My Coding Journal</span>
-                            </a>
-                        </h1>
+                        <h1 id="logo"><a href="index.html">Joyce Zhou<span>My Coding Journal</span></a></h1>
                         <nav id="nav">
                             <ul>
                                 <li class="current"><a href="index.html">Welcome</a></li>
@@ -67,89 +57,73 @@
                             </ul>
                         </nav>
                     </header>
-
 			<!-- Main -->
 				<article id="main">
-
 					<header class="special container">
 						<span class="icon solid fa-sun"></span>
 						<h2>Design Pattern <strong>设计模式</strong></h2>
 						<p>“ Code is like humor. When you have to explain it, it’s bad.” – Cory House</p>
 					</header>
-
-					<!-- One -->
+					<!-- Table of Content -->
 						<section class="wrapper style4 container">
 							<!-- Content -->
 								<div class="content">
 									<section>
 										<a href="./designPattern/observer.html" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Obsedsfdf/h3>
+											<h3>Table of Content</h3>
 										</header>
-										<p> dfddf</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique. Sed id sem et massa ornare pellentesque. Maecenas pharetra porta accumsan. </p>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus, non hendrerit ipsum arcu tristique est.</p>
+										<ul>
+											<li><a href="#codingApproach">编程思想－－ OOP && POP</a></li>
+										</ul>
 									</section>
 								</div>
-
 						</section>
-
-					<!-- Two -->
-						<section class="wrapper style1 container special">
-							<div class="row">
-								<div class="col-4 col-12-narrower">
-
+					<!-- Content -->
+					<section class="wrapper style4 container" id="codingApproach">
+							<!-- Content -->
+								<div class="content">
 									<section>
-										<header>
-											<h3>Observer 观察者</h3>
-										</header>
-										<p>最经典的设计模式之一</p>
-										<footer>
-											<ul class="buttons">
-												<li><a href="./designPattern/observer.html" class="button small">Learn More</a></li>
-											</ul>
-										</footer>
+										<header><h3>OOP 与 POP, 编程思想的进化史</h3></header>
+										了解两个不同的编程思想是去理解设计模式的第一步。
+										<h4>POP －－ 面对流程编程</h4>
+										在一开始的时候例如C语言都是面向流程编程的。什么是面向流程编程呢？意思就是说，我们作为程序员侧重于思考如何把一个大
+										任务拆分成一个一个的小任务。一个最经典的🌰就是如何做一个三明治。
+										<ol>
+											<li>拿出两片面包，果酱以及小刀</li>
+											<li>将面包放到盘子上</li>
+											<li>把果酱用小刀抹到面包上</li>
+											<li>合上两片面包</li>
+										</ol>
+										写成代码就是：
+										<p class="codepen" data-height="300" data-theme-id="37857" data-default-tab="js,result" data-user="joycho123" data-slug-hash="eYYNzqw" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="eYYNzqw">
+												<span>See the Pen <a href="https://codepen.io/joycho123/pen/eYYNzqw">
+												eYYNzqw</a> by Joy (<a href="https://codepen.io/joycho123">@joycho123</a>)
+												on <a href="https://codepen.io">CodePen</a>.</span>
+											  </p>
+											  <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+										但是面向过程流程有一个很大的弊病，就是一旦我的程序变得很大，它的代码也随之越来越复杂。可维护性越来越差。
+										比如说我要有3000个人的要面包。每制作完一个都要喊这个顾客的名字的话，代码就会变得很庞大。每一个顾客的建立都要通过
+										一个function，把顾客放在一个array中，最后一个个的去call makeSandwitch function。
+										<h4>OOP的出现</h4>
+										这个时候如果我们有一个顾客模版是不是问题就简单多了。如果有一个顾客模版，抽象出了顾客的特点以及普遍的任务，描述了
+										所有客户的<strong>共性</strong>。
+										然后我们在用用模版生成每个个例，去<strong>描述每个人的不同</strong>。
+										这是oop最大的特点以及好处。那就是能够建立这种模版。提供更高的灵活性。不论是继承，多态，和封装。都是为了建立模版这个
+										目的而服务的特性。事实上，oop 是包含了pop的，在它处理过程逻辑的时候。<br/>
+										面向对象编程思想是最接近人的思想的。
+										<h4>计算机发展史看oop 与 pop</h4>
+										hardware: <span class="diagram__component">0 && 1</span> =>
+										面向过程：<span class="diagram__component">C#</span> ＝>
+										结构性编程： <span class="diagram__component">C</span> ＝>
+										面向对象编程： <span class="diagram__component">Java</span>
 									</section>
-
 								</div>
-								<div class="col-4 col-12-narrower">
-
-									<section>
-										<header>
-											<h3>Also Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-										<footer>
-											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
-											</ul>
-										</footer>
-									</section>
-
-								</div>
-								<div class="col-4 col-12-narrower">
-
-									<section>
-										<header>
-											<h3>Probably Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-										<footer>
-											<ul class="buttons">
-												<li><a href="#" class="button small">Learn More</a></li>
-											</ul>
-										</footer>
-									</section>
-
-								</div>
-							</div>
 						</section>
-
 				</article>
 
 			<!-- Footer -->
 				<footer id="footer">
-
 					<ul class="icons">
 						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -157,15 +131,11 @@
 						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a></li>
 					</ul>
-
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
-
 				</footer>
-
 		</div>
-
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
@@ -176,6 +146,5 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
