--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Twenty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Twenty by HTML5 UP</title>
@@ -14,18 +9,15 @@
 	</head>
 	<body class="index is-preload">
 		<div id="page-wrapper">
-
 			<!-- Header -->
 				<header id="header" class="alt">
 					<h1 id="logo"><a href="index.html">Joyce Zhou
-						<span>My Coding Journal</span>
-						</a>
+						<span>My Coding Journal</span></a>
 					</h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
-							<li class="submenu">
-								<a href="#">分类</a>
+							<li class="submenu"><a href="#">分类</a>
 								<ul>
 									<li><a href="left-sidebar.html">html</a></li>
 									<!-- css -->
@@ -47,7 +39,7 @@
 											<li><a href="design-pattern.html">design pattern</a></li>
 										</ul>
 									</li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a href="java.html">java</a></li>
 									<!-- 
 									<li class="submenu">
 										<a href="#">Submenu</a>
@@ -66,10 +58,8 @@
 						</ul>
 					</nav>
 				</header>
-
 			<!-- Banner -->
 				<section id="banner">
-
 					<!--
 						".inner" is set up as an inline-block so it automatically expands
 						in both directions to fit whatever's inside it. This means it won't
@@ -77,7 +67,6 @@
 						appropriate (<br />).
 					-->
 					<div class="inner">
-
 						<header>
 							<h2>Joyce Zhou</h2>
 						</header>
@@ -91,14 +80,10 @@
 								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
 							</ul>
 						</footer>
-
 					</div>
-
 				</section>
-
 			<!-- Main -->
 				<article id="main">
-
 					<header class="special container">
 						<span class="icon solid fa-chart-bar"></span>
 						<h2>A brief <strong>introduction</strong> of who I am
@@ -115,41 +100,30 @@
 						我也会把这些小项目的链接放在我的网站里。
 						 </p>
 					</header>
-
 					<!-- One -->
 						<section class="wrapper style2 container special-alt">
 							<div class="row gtr-50">
 								<div class="col-8 col-12-narrower">
 									<header>
-										<h2>一点关于
-											<strong>我</strong> 
-											的小事
-										</h2>
+										<h2>一点关于<strong>我</strong> 的小事</h2>
 									</header>
-									<p>
-										我是在美国🇺🇸普渡大学读书的大四学生。喜欢上代码是因为一堂讲代码的初级课。当时老师让我们考虑一个很简单的问题－
+									<p>我是在美国🇺🇸普渡大学读书的大四学生。喜欢上代码是因为一堂讲代码的初级课。当时老师让我们考虑一个很简单的问题－
 										斐波纳切数列。我就疯狂的喜欢上了这个神奇的东西，它用最简洁的有逻辑的方式在表达自己的观点。
 									</p>
-									<p>
-										在我的努力之下后来去了美国一家3D打印公司实习，接触了前端编程。每次都能看见在自己的思考之下创造出一个好看的页面，
+									<p>	在我的努力之下后来去了美国一家3D打印公司实习，接触了前端编程。每次都能看见在自己的思考之下创造出一个好看的页面，
 										那种成就感是怎么样也难以形容的。
 									</p>
-									<p>
-										现在我快毕业了，希望能找到一家公司，在里面努力成长，以后可以和公司一起进步。
+									<p>现在我快毕业了，希望能找到一家公司，在里面努力成长，以后可以和公司一起进步。
 									</p>
 									<footer>
 										<ul class="buttons">
-											<li>
-												<a href="#" class="button btn-download--resume">
+											<li><a href="#" class="button btn-download--resume">
 													查看<em>我的简历</em>
-												</a>
-											</li>
+												</a></li>
 										</ul>
 									</footer>
-
 								</div>
 								<div class="col-4 col-12-narrower imp-narrower">
-
 									<ul class="featured-icons">
 										<li><span class="icon fa-clock"><span class="label">Feature 1</span></span></li>
 										<li><span class="icon solid fa-volume-up"><span class="label">Feature 2</span></span></li>
@@ -158,16 +132,13 @@
 										<li><span class="icon solid fa-lock"><span class="label">Feature 5</span></span></li>
 										<li><span class="icon solid fa-cog"><span class="label">Feature 6</span></span></li>
 									</ul>
-
 								</div>
 							</div>
 						</section>
-
 					<!-- Two -->
 						<section class="wrapper style1 container special">
 							<div class="row">
 								<div class="col-4 col-12-narrower">
-
 									<section>
 										<span class="icon solid featured fa-check"></span>
 										<header>
@@ -175,10 +146,8 @@
 										</header>
 										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
 									</section>
-
 								</div>
 								<div class="col-4 col-12-narrower">
-
 									<section>
 										<span class="icon solid featured fa-check"></span>
 										<header>
@@ -186,10 +155,8 @@
 										</header>
 										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
 									</section>
-
 								</div>
 								<div class="col-4 col-12-narrower">
-
 									<section>
 										<span class="icon solid featured fa-check"></span>
 										<header>
@@ -197,21 +164,16 @@
 										</header>
 										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
 									</section>
-
 								</div>
 							</div>
 						</section>
-
 					<!-- Three -->
 						<section class="wrapper style3 container special">
-
 							<header class="major">
 								<h2>Next look at this <strong>cool stuff</strong></h2>
 							</header>
-
 							<div class="row">
 								<div class="col-6 col-12-narrower">
-
 									<section>
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
@@ -219,10 +181,8 @@
 										</header>
 										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
 									</section>
-
 								</div>
 								<div class="col-6 col-12-narrower">
-
 									<section>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
@@ -230,12 +190,10 @@
 										</header>
 										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
 									</section>
-
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-6 col-12-narrower">
-
 									<section>
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
@@ -243,10 +201,8 @@
 										</header>
 										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
 									</section>
-
 								</div>
 								<div class="col-6 col-12-narrower">
-
 									<section>
 										<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
@@ -254,23 +210,18 @@
 										</header>
 										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
 									</section>
-
 								</div>
 							</div>
-
 							<footer class="major">
 								<ul class="buttons">
 									<li><a href="#" class="button">See More</a></li>
 								</ul>
 							</footer>
-
 						</section>
-
 				</article>
 
 			<!-- CTA -->
 				<section id="cta">
-
 					<header>
 						<h2>Ready to do <strong>something</strong>?</h2>
 						<p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p>
@@ -281,12 +232,10 @@
 							<li><a href="#" class="button">LOL Wut</a></li>
 						</ul>
 					</footer>
-
 				</section>
 
 			<!-- Footer -->
 				<footer id="footer">
-
 					<ul class="icons">
 						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -294,13 +243,10 @@
 						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a></li>
 					</ul>
-
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
-
 				</footer>
-
 		</div>
 
 		<!-- Scripts -->
@@ -313,6 +259,5 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="index.js"></script>
-
 	</body>
 </html>
