--- a/java.html
+++ b/java.html
@@ -74,6 +74,7 @@
 										</header>
 										<ul>
 											<li><a href="#ioFlow">IO流</a></li>
+											<li><a href="#charset">字符集</a></li>
 										</ul>
 									</section>
 								</div>
@@ -134,6 +135,45 @@
 											FileInputStream instance 可以从指定的文件里读取字节。下面的代码是标准读取文件的写法。
 											<iframe height="400px" width="100%" src="https://repl.it/repls/LiveTragicCopycat?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
 											<h5>练习：将input.txt 中的text 复制到 output.txt</h5>
+										</p>
+									</section>
+								</section>
+								<section class="wrapper style4 container" id="charset">
+									<h4>字符集</h4>
+									<section>	
+										<h5>解决的问题</h5>
+										 与字节流不一样。字符流能够解决符号的问题，比如说亚洲的符号文字，韩国，日本以及中国的字符。这些字符都是由两个或者以上的
+											字节所构成。如果用字节流一个一个的去读取，会造成读取的混乱。所以这个时候我们需要用字符流去读取。那么怎么读取呢？如果让
+											每一个公司自己去定义，那么它的东西就无法被其他公司正确的解析。这时候我们就出现了一个像电话簿一样的东西作为标准，来编码
+											（encoding） 与解码(decoding).
+										<h5>概念：字符集 charset</h5>
+											charset 可以被想象成一个标准的电话簿。每一个电话簿中的联系人都有一个对应的unique的num.我们既可以通过对方打来的电话知道
+											对方的身份，也可以通过人名去打电话。这其实就是charset  
+										<h5>技术&&工具</h5>
+											<ul>
+												<li>编码encoding
+													<p>编码就是一个由字符---charset---> bytes --binary --> bits的过程。
+													</p>
+												</li>
+												<li>解码decoding
+													<p>与编码相反，是一个调出hard disk 中的数据给用户去读取的过程。</p>
+												</li>
+											</ul>
+										<h5> 分类：</h5>
+											<table>
+												<thead> <tr><td>Area</td><td>Charset</td></tr> </thead>
+												<tbody>
+													<tr><td>US</td><td>ASCII</td></tr> 
+													<tr><td>Asia</td><td>GBK</td></tr>
+													<tr><td>Worldwide</td><td>UTF-8</td></tr>
+												</tbody>
+											</table>
+											在世界交流开展之前，可以每个地区都使用不同的字符集对底层的bytes 进行不同的解析。可是在世界贸易开始之后，这就带来了
+											问题。比如说来美国谈合作的中国人不能很好的读取从中国公司发过来的邮件。因为在美国，邮件中的中文用了ASCII的解析方式
+											而不是GBK，导致了乱码。因为在GBK的定义中，一个中文char 是由 ［-D3D9, -20E8］两个bytes 所组成的<br/>
+											那么这时候unicode 就出现了。unicode 包含了全球所有的characters。unicode 现在已经成为了一个电子邮件以及其他数据传输
+											的标准。在我们的html 文件上方的 meta 数据中， meta charset="utf-8" 就是我们对于浏览器解析内容的字符集选定。
+										<h5>练习：简述charset 的作用，不同的种类，以及为什么它重要</h5>
 										</p>
 									</section>
 								</div>
